fixed layout bug where menu was hidden under footer when menu was longer than content

--- a/less/basic-layout.less
+++ b/less/basic-layout.less
@@ -9,9 +9,15 @@ body {
    position:relative;
 }
 
-#main-container {
+#container > .content {
+    display: table;
+    width: 100%;
     margin-bottom: @footer-height;
     padding-bottom: 20px;
+}
+
+#main-container {
+    display: table-cell;
     &.include-menu {
         float: right;
         width: 100%;
