--- a/less/menu.less
+++ b/less/menu.less
@@ -34,6 +34,7 @@
 }
 
 #menu {
+    display: table-cell;
     width: @menu-width;
     float: left;
     margin-top: 2em;
